# PureView-Windows

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
include/pureview/: core.hpp
installer/: install.cmd  install.ps1  uninstall.cmd  uninstall.ps1
resources/: PureView.rc  app.manifest  resource.h
scripts/: package.ps1  verify-installer.ps1
src/: core.cpp  image_loader.cpp  image_loader.hpp  main.cpp  viewer_window.cpp  viewer_window.hpp
tests/: core_tests.cpp
